[package]
name = "def"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] } # features = ["dynamic_linking"]
#bevy-inspector-egui = "0.18.3"
bevy_ecs_ldtk = "0.7.0"
bevy_ecs_tilemap = "0.10.0"
bevy_editor_pls = "0.4.0"
iyes_progress = "0.8.0"
leafwing-input-manager = "0.9.2"
serde = "1.0.160"
serde_json = "1.0.96"


[workspace]
resolver = "2"



# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# [toolchain]
# channel = "nightly"



# cargo install cargo-watch
# cargo watch -cx "run --release --target wasm32-unknown-unknown"
# cargo watch -cx "run --release"
# cargo watch -cx "run "

